--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,13 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.3"
+    "react-router-dom": "^7.9.3",
+    "express": "^4.18.2",
+    "serverless-http": "^3.0.0",
+    "mongoose": "^8.19.0",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^3.0.2",
+    "zod": "^4.1.11"
   }
 }
